# ligtbm

./: .docker-env  .gitignore  .local_params_example  FUCKdocker-compose.yml  README.md  docker-compose.yml  jun16_docker-compose.yml  local-docker-compose  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  bootstrap.sh  conda-env.yml  options.json.in  scc_modules.txt
backend/ligtbm/: BLAST_tools.py  CS_confs_align.py  check_modeller_key.py  collect_ligs_prepare_mcs.py  fetch_complex.py  gen_opt_confs.py  logging.conf  minimize.py  modeller_tools.py  parameterize.py  prepare_starting_poses.py  score.py  test_minimize.py  test_parameterize.py  tools.py
backend/ligtbm/data/: README.md  atoms.0.0.6.prm.ms.3cap+0.5ace.Hr0rec  charmm_param.prm
backend/ligtbm/data/Ligand_Expo/: cc-to-pdb.tdd
backend/ligtbm/rmin/: CMakeLists.txt
backend/ligtbm/rmin/src/: main.c
backend/ligtbm/rmin/tests/: compare_with_old.py
backend/ligtbm/rmin/tests/data/: libmol.params  pdbamino_new.rtf
backend/ligtbm/tests/BLAST_tools/: blast_result.xml  example.fasta  example.json  test.sh
backend/ligtbm/tests/CS_confs_align/: ref.mol  tmp.sdf
backend/ligtbm/tests/fetch_complex/: 2w8t.cif  2w8t_env.mol  2w8t_lig.mol  2w8t_seq.fasta  test.sh
backend/tools/: run_command.py
ligtbm_storage/: state.db
server/: entrypoint.sh
server/core/: admin.py  emails.py  env.py  forms.py  fun.py  models.py  urls.py  utils.py  views.py
server/core/modules/: validators.py
server/core/runner/: fun.py  runner.py
server/server/: config.py  settings.py
(+28 files in other folders)
